--- a/chequeos/templates/chequeos/especificaciones_form.html
+++ b/chequeos/templates/chequeos/especificaciones_form.html
@@ -15,6 +15,12 @@
             {{ form.Equipo }}
         </div>
 
+        <!-- USUARIO -->
+<div class="mb-3">
+    {{ form.usuario.label_tag }}
+    {{ form.usuario|add_class:"form-select" }}
+</div>
+
         <!-- INFO AUTOMÁTICA DEL EQUIPO SELECCIONADO -->
         <div id="info-equipo" class="alert alert-info d-none">
             <strong>Placa:</strong> <span id="info-placa"></span><br>
